# twee

./: .gitignore  .hgtags  CNAME  LICENSE  README  README.md  _config.yml  bench.hs  cabal.haskell-ci  cabal.project  index.md  installation.md  installing.md  kbc.cabal  manual.md  stack.yaml  test.hs  twee-lib.cabal  twee.cabal
.github/workflows/: haskell-ci.yml  haskell.yml
_layouts/: default.html
css/: asciidoc.css  layout-cc.css
e/: robbins-easy  robbins-hard
examples/: GRP196-1.p  GRP666-4.p  LAT071-1.p  LAT072-1.p  LAT073-1.p  PUZ037-3.p  PUZ052-1.p  RNG025-buggy.p  RNG035-7.p  ROB010-1.p  ROB033-1.p  aim.p  append-rev.p  cm.p  db.proof  diff2.p  gmv.p  gt6.tptp.p  loop.p  loop2.p  lukasiewicz.p  nicomachus.p  rellat_appendixb.p  rellat_appendixc.p  rellat_theorem34_6.p  ring.p  ring2-cancel.p  robbins.p  sam.p  semigroup.p  sum.p  vbool.p  veroff-short.p  veroff.p  winker.p  winker2.p  y-easy.p  y-encoded.p  y.p
examples/satisfiable/: abelian.p  bad-ac.p  commutativity-bad.p  group.p  groupoid.p  length.p  length2.p  length3.p  martin-nipkow-3.p  plus-combinator.p  plus-times.p  plus.p  pretty.p
executable/: Main.hs  ParallelMain.hs  SequentialMain.hs  link.c  twee.cabal
executable/misc/: static-libstdc++
misc/: 100-random-problems  BestTwee.hs  Localise.hs  MaxCover.hs  Nested.hs  NestedOrig.hs  ROB007-1.proof  Test.hs  analyse_trace.pl  bench.hs  count-results  index-artificial-bug.patch  magic.py  print_trace.pl  ratings  ring_noconn.pl  test.hs
misc/system-description/: BOO001-1.output  twee.html
notes/: ac plus  boo067_bad.pl  boo067_good.pl  ideas  kbc simplifier notes  kbo under assumptions  new-ground-joining  ring_conn.pl  simplification  to do
patches/: Historical.hs  MemoFun.hs  MultiIndex.hs  Nested.hs  cancellation.patch  cereal.patch  cps-only-with-axioms.patch  dynarr.patch  equals-div-2.patch  fifo.patch  flatten-difficult-axioms.patch  history.patch  improve-cp.patch  induction-demo.patch  more-work-with-size.patch  multicp.patch  noindex.patch  noproof.patch  requeue.patch  skip-skolem.patch  skolem-heuristic.patch  split-aggressively.patch  st.patch  strict-deriv.patch  strict-proofs.patch  subsumption.patch  use_ground_joinable_for_rewriting.patch  work-on-size.patch  working-subst.patch
src/: KBC.hs  LICENSE  Twee.hs  errors.h  twee-lib.cabal
src/Data/: BatchedQueue.hs  ChurchList.hs  DynamicArray.hs  Heap.hs  Intern.hs  Label.hs  Labels.hs  Numbered.hs  PackedSequence.hs  Sym.hs
src/Data/Primitive/: ArrayArray.hs  Checked.hs  SmallArray.hs
src/Data/Primitive/ByteArray/: Checked.hs
src/Data/Primitive/SmallArray/: Checked.hs
src/KBC/: Array.hs  Base.hs  Constraints.hs  Constraints.hs-boot  Equation.hs  FourierMotzkin.hs  Index.hs  Indexes.hs  KBO.hs  Pretty.hs  Queue.hs  Rewrite.hs  Rule.hs  Term.hs  Utils.hs
src/KBC/Term/: Core.hs  Flat.hs  Nested.hs
src/KBC/Term/Flat/: Core.hs
src/Twee/: Array.hs  Base.hs  Bench.hs  CP.hs  ChurchList.hs  Constraints.hs  Constraints.hs-boot  Equation.hs  Generate.hs  Heap.hs  Index.hs  Indexes.hs  Join.hs  KBO.hs  LPO.hs  Label.hs  PassiveQueue.hs  Pretty.hs  Profile.hs  Proof.hs  Queue.hs  Rule.hs  Task.hs  Term.hs  Utils.hs
src/Twee/Index/: Lookup.hs  Simple.hs  Split.hs
src/Twee/Rule/: Index.hs
src/Twee/Term/: Core.hs  Flat.hs
src/Twee/old/: LPO.hs
test/: Common.hs  Handmade.hs  Index.hs  Main.hs  Nest.hs  Ordering.hs  TermOrder.hs  Terms.hs
tests/: BOO067-1.p  COL002-4.p  PUZ037-3-2.p  REL038-1.p  ROB007-1.p  ROB027-1-b.p  ROB027-1-pretty.p  ROB027-1.p  ROB027-1.proof  abelian  abelian.p  and-or  and-or.p  append-rev  append-rev.p  db-goal.p  db.p  deriv.p  diff  diff.p  factor.p  filter.p  fol.p  group.p  groupoid  gt6.tptp.p  haken.p  lat.p  lcl.p  length  length.p  length2  length2.p  length3  loop  loop.p  loop2  loop2.p  lukasiewicz  lukasiewicz.p  (+67 more)
tests/satisfiable/: and-or.p  groupoid.p  martin-nipkow-2.p  martin-nipkow-3.p  martin-nipkow.p  plus-combinator.p  plus.p  veroff.p
wm/: diff.w  groupoid.w  length.w  loop.w  martin-nipkow.w  plus-combinator.w  plus-times.w  plus.w  ring.w  ring2.w  ring3.w  robbins.w  robbins2.w  robbins3.w  semigroup.w  winker-hard.w  winker.w  winker2.w  winker3.w  y-hard-eq.w  y-hard.w  y.w
