name:                kbc
version:             0.1
synopsis:            An equational theorem prover based on Knuth-Bendix completion
homepage:            http://github.com/nick8325/kbc
license:             BSD3
license-file:        LICENSE
author:              Nick Smallbone
maintainer:          nicsma@chalmers.se
category:            Theorem Provers
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  src/errors.h

library
  exposed-modules:
    KBC
    KBC.Base
    KBC.Pretty
    KBC.Constraints
    KBC.Index
    KBC.Queue
    KBC.Rule
    KBC.Utils
    KBC.Term
    KBC.KBO
  build-depends:
    base >= 4 && < 5,
    term-rewriting,
    containers,
    transformers,
    dlist,
    pretty,
    heaps,
    fourier-motzkin
  hs-source-dirs:      src
  include-dirs:        src
  ghc-options:         -W
  default-language:    Haskell2010

executable kbc
  main-is:             executable/Main.hs
  default-language:    Haskell2010
  build-depends:       base,
                       kbc,
                       containers,
                       transformers,
                       term-rewriting,
                       pretty
