name:                twee-lib
version:             2.1
synopsis:            An equational theorem prover
homepage:            http://github.com/nick8325/twee
license:             BSD3
license-file:        LICENSE
author:              Nick Smallbone
maintainer:          nicsma@chalmers.se
category:            Theorem Provers
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md tests/*.p misc/*.hs misc/*.pl misc/static-libstdc++
description:
   Twee is an experimental equational theorem prover based on
   Knuth-Bendix completion.
   .
   Given a set of equational axioms and a set of equational
   conjectures it will try to prove the conjectures.
   It will terminate if the conjectures are true but normally
   fail to terminate if they are false.
   .
   The input problem should be in TPTP format (see
   http://www.tptp.org). You can use types and quantifiers, but apart
   from that the problem must be equational.
   .
   This package contains only the library part of twee.

source-repository head
  type:     git
  location: git://github.com/nick8325/twee.git
  branch:   master

flag static
  description: Build a static binary.
  default: False

flag static-cxx
  description: Build a binary which statically links against libstdc++.
  default: False

flag llvm
  description: Build using LLVM backend for faster code.
  default: False

flag bounds-checks
  description: Use bounds checks for all array operations.
  default: False

library
  exposed-modules:
    Twee
    Twee.Base
    Twee.Constraints
    Twee.CP
    Twee.Equation
    Twee.Index
    Twee.Join
    Twee.KBO
    Twee.Label
    Twee.PassiveQueue
    Twee.Pretty
    Twee.Proof
    Twee.Rule
    Twee.Rule.Index
    Twee.Term
    Twee.Task
    Twee.Utils
  other-modules:
    Data.ChurchList
    Data.DynamicArray
    Data.Heap
    Twee.Term.Core

  build-depends:
    base >= 4 && < 5,
    containers,
    transformers,
    dlist,
    pretty,
    ghc-prim,
    primitive >= 0.6.2.0,
    vector
  hs-source-dirs:      src
  ghc-options:         -W -fno-warn-incomplete-patterns -O2 -fmax-worker-args=100
  default-language:    Haskell2010

  if flag(llvm)
    ghc-options: -fllvm
  if flag(bounds-checks)
    cpp-options: -DBOUNDS_CHECKS
    exposed-modules:
      Data.Primitive.SmallArray.Checked
      Data.Primitive.ByteArray.Checked
      Data.Primitive.Checked
