name:                twee
version:             2.6
synopsis:            An equational theorem prover
homepage:            http://github.com/nick8325/twee
license:             BSD3
license-file:        LICENSE
author:              Nick Smallbone
maintainer:          nicsma@chalmers.se
category:            Theorem Provers
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md tests/*.p misc/*.hs misc/*.pl misc/static-libstdc++
description:
   Twee is an experimental equational theorem prover based on
   Knuth-Bendix completion.
   .
   Given a set of equational axioms and a set of equational
   conjectures it will try to prove the conjectures.
   It will terminate if the conjectures are true but normally
   fail to terminate if they are false.
   .
   The input problem should be in TPTP format (see
   http://www.tptp.org). You can use types and quantifiers, but apart
   from that the problem must be equational.

source-repository head
  type:     git
  location: git://github.com/nick8325/twee.git
  branch:   master

flag static
  description: Build a static binary.
  default: False
  manual: True

flag static-cxx
  description: Build a binary which statically links against libstdc++.
  default: False
  manual: True

flag parallel
  description: Build a special parallel version of Twee.
  default: False
  manual: True

executable twee
  if flag(parallel)
    main-is: ParallelMain.hs
    build-depends: async, unix
    c-sources: executable/link.c
  else
    main-is: Main.hs

  hs-source-dirs:      executable
  other-modules:       SequentialMain
  default-language:    Haskell2010
  build-depends:       base < 5,
                       twee-lib == 2.6,
                       containers,
                       pretty,
                       split,
                       jukebox >= 0.5.8,
                       ansi-terminal >= 0.9,
                       symbol
  ghc-options:         -W -fno-warn-incomplete-patterns

  if flag(static)
    ghc-options: -optl -static

  if flag(static-cxx)
    ghc-options: -pgml misc/static-libstdc++

Test-Suite twee-test
    type: exitcode-stdio-1.0
    Default-language: Haskell2010
    hs-source-dirs:
        misc
    main-is: Test.hs
    build-depends: base < 5, QuickCheck, twee-lib == 2.6, containers, pretty
    ghc-options:
      -threaded
      -rtsopts
      -feager-blackholing
      -with-rtsopts=-N4
